app_zrpp_qhbhb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-qhbhb-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: qhbhb.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-qhbhb
          servicePort: 9992
